--- a/wisdomCampus/html/studentManage/student-attendance.html
+++ b/wisdomCampus/html/studentManage/student-attendance.html
@@ -86,7 +86,7 @@
 			<h1 class="mui-title" style="color: white;">学生考勤</h1>
 			<a href="#bottomPopover" class="mui-pull-right" style="color: white;width:120px;height: 45px; font-size: 25px;"><img style="width: 17px;float: right;margin: 12px 5px 0 0;" src="../../img/utils/more.png"/></a>
 		</header>
-		<div class="mui-content" id="selectTitle" style="position: fixed;z-index: 8;">
+		<div class="mui-content" id="selectTitle" style="position: fixed;z-index: 1;">
 			<div class="mui-segmented-control" >
 				<a class="mui-control-item" v-cloak href="javascript:void(0)" @tap="selectGrade()"><span>{{grade}}</span><span class="mui-icon mui-icon-arrowdown"></span></a>
 				<a class="mui-control-item" v-cloak href="javaScript:void(0)" @tap="selectClass()"><span>{{classes}}</span><span class="mui-icon mui-icon-arrowdown"></span></a>
@@ -100,7 +100,7 @@
 					<div class="mui-scroll">
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell mui-media" v-for="(actionModel,index) in actionArray">
-								<div class="mui-slider-right mui-disabled" @tap="deleteItem($event,actionModel.id)">
+								<div v-if='personalModel.utid==actionModel.createUser' class="mui-slider-right mui-disabled" @tap="deleteItem($event,actionModel.id,actionModel)">
 									<a class="mui-btn mui-btn-red">删除</a>
 								</div>
 								<a class="mui-slider-handle" href="javascript:;" @tap="gotoDeatil(index,actionModel)">
@@ -120,8 +120,8 @@
 			<div id="bottomPopover" class="mui-popover mui-popover-bottom">
 				<div class="mui-popover-arrow"></div>
 					<ul class="mui-table-view" style="width: 125px;float: right;">
-						<li class="mui-table-view-cell" @tap="toPage('student-attendance-add.html')"><span class="mui-icon mui-icon-plus" style="font-size: 15px;">添加</span></li>
-						<li class="mui-table-view-cell" @tap="toPage('student-attendance-count.html')"><span class="mui-icon mui-icon-compose" style="font-size: 15px;">统计报表</span></li>
+						<li class="mui-table-view-cell" @tap="toPage('student-attendance-add.html',0)"><span class="mui-icon mui-icon-plus" style="font-size: 15px;">添加</span></li>
+						<li class="mui-table-view-cell" @tap="toPage('student-attendance-count.html',1)"><span class="mui-icon mui-icon-compose" style="font-size: 15px;">统计报表</span></li>
 					</ul>
 				</div>
 			</div>
@@ -146,22 +146,23 @@
 			var pageSize = 10; //请求数据页面
 			var totalPageCount; //总页码
 			var flagRef = 0; //是刷新0，还是加载更多1
-			
+			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			var userPicker,userPickerType;
 			var canUpdate=true;
 			var actionArrayData = new Vue({
 				el: "#actionArrayData",
 				data: {
+					personalModel:personal,
 					actionArray: []
 				},
 				methods: {
-					deleteItem:function(event,index){
+					deleteItem:function(event,index,model){
+						console.log('删除model:'+JSON.stringify(model));
 						var dom=event.target;
 						var li = dom.parentNode.parentNode;
 						var btnArray = ['确认', '取消'];
 						mui.confirm('确认删除该条记录？', '校讯通', btnArray, function(e) {
 							if (e.index == 0) {
-//								li.parentNode.removeChild(li);
 								console.log("删除第"+index+"个item")
 								attendanceDelete(index,li)
 							} else {
@@ -176,15 +177,20 @@
 //						console.log(JSON.stringify(actionArray[index]))
 						utils.mOpenWithData("../../html/studentManage/student-attendanceDetail.html", model);
 					},
-					toPage:function(url){//右上角弹出框
+					toPage:function(url,index){//右上角弹出框
 //						plus.webview.open(url);
 						$("#bottomPopover").hide();
 						$(".mui-backdrop").hide();
-						if (personal.utp==0&&personal.clss.length>0) {
-							utils.mOpenWithData(url, {});
+						if (index == 0) {
+							if (personal.utp==0&&personal.clss.length>0) {
+								utils.mOpenWithData(url, {});
+							} else{
+								mui.toast("无此权限");
+							}
 						} else{
-							mui.toast("无此权限");
+							utils.mOpenWithData(url, {});
 						}
+						
 					} 
 				}
 			});
