--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -111,6 +111,10 @@
 			.mui-popover-arrow {
 				display: none;
 			}
+			
+			.mui-table-view-cell>a:not(.mui-btn).mui-active{
+				background-color: #fff;
+			}
 		</style>
 	</head>
 
@@ -861,6 +865,7 @@
 					console.log('8.保存行为信息 ' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						mui.toast('保存成功');
+						mui.fire(plus.webview.currentWebview().opener(), 'refreshList', {});
 						setTimeout(function(){
 							mui.back();
 						},2000)
