--- a/wisdomCampus/html/studentManage/student-attendance.html
+++ b/wisdomCampus/html/studentManage/student-attendance.html
@@ -261,6 +261,12 @@
 				$(".mui-backdrop").hide();
 			});
 			
+			//接收添加或详情页通知的刷新列表事件
+			window.addEventListener('refreshList', function() {
+				pageIndex = 1;
+				flagRef = 0;
+				getAttendanceList(pageIndex);
+			});
 			 
 			//阻尼系数、初始化刷新加载更多
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
@@ -275,10 +281,8 @@
 				down: {
 					callback: function() {
 						var self = this;
-						//console.log("下拉刷新");
 						pageIndex = 1;
 						flagRef = 0;
-						//54.科教频道_个人收藏列表
 						getAttendanceList(pageIndex);
 						setTimeout(function() {
 							//结束下拉刷新
@@ -311,6 +315,8 @@
 			});
 			//1.学生考勤列表首页
 			function getAttendanceList(index) {
+				console.log("pageIndex===="+pageIndex);
+				console.log("flagRef===="+flagRef);
 				var gradeValue=selectTitle.sGrade;
 				var classesValue=selectTitle.sClasses;
 				var comData ={
@@ -321,9 +327,14 @@
 					pageNumber:index,
 					attendanceType:selectTitle.attendanceValue
 				}
-				var wd = events.showWaiting();
+				var wd;
+				if(flagRef==0){
+					wd= events.showWaiting();
+				}
 				getAttendanceIndex(comData,function(data) {
-					wd.close();
+					if(flagRef==0){
+						wd.close();
+					}
 					console.log('1.学生考勤列表首页:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						//总页数
