--- a/wisdomCampus/html/studentManage/student-talkRecord.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord.html
@@ -240,6 +240,15 @@
 				return obj[param] || '';
 			}
 			
+			
+			
+			//接收添加或详情页通知的刷新列表事件
+			window.addEventListener('refreshList', function() {
+				pageIndex = 1;
+				flagRef = 0;
+				getAttendanceList(pageIndex);
+			});
+			
 			//阻尼系数、初始化刷新加载更多
 			var deceleration = mui.os.ios ? 0.003 : 0.0009;
 			mui('.mui-scroll-wrapper').scroll({
@@ -253,10 +262,8 @@
 				down: {
 					callback: function() {
 						var self = this;
-						//console.log("下拉刷新");
 						pageIndex = 1;
 						flagRef = 0;
-						//54.科教频道_个人收藏列表
 						getAttendanceList(pageIndex);
 						setTimeout(function() {
 							//结束下拉刷新
@@ -287,8 +294,11 @@
 					}
 				}
 			});
+			
 			//3.1.教师谈话首页列表
 			function getAttendanceList(index) {
+				console.log("pageIndex===="+pageIndex);
+				console.log("flagRef===="+flagRef);
 				var gradeValue=selectTitle.sGrade;
 				var classesValue=selectTitle.sClasses;
 				var stuValue=selectTitle.sStudent;
@@ -303,9 +313,14 @@
 					pageSize:pageSize,
 					pageNumber:index
 				}
-				var wd = events.showWaiting();
+				var wd;
+				if(flagRef==0){
+					wd= events.showWaiting();
+				}
 				getTalkChatIndex(comData,function(data) {
-					wd.close();
+					if(flagRef==0){
+						wd.close();
+					}
 					console.log('3.1.教师谈话首页列表:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						//总页数
