--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -204,7 +204,7 @@
 				data:{
 					grade:'全部年级',
 					classes:'全部班级',
-					type:'类型',
+					type:'全部类型',
 					list:[],
 					sGrade:"",//存值用
 					sClasses:"",//存值用
