--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -226,7 +226,7 @@
 			</template>
 			<template v-else>
 				<ul class="mui-table-view">
-					<li class="mui-table-view-cell" @tap="selectTime($event)">
+					<li class="mui-table-view-cell" @tap="selectTime($event,'fsrq')" data-options='{"type":"date"}'>
 						<a  class="aCss">发生日期</a>
 						<p  data-options='{"type":"date"}' class="mui-navigate-right rCss">{{actionDetail.behaviorTime}}</p>
 					</li>
@@ -280,14 +280,23 @@
 						</div>
 					</a>
 				</li>
-				<li class="mui-table-view-cell">
-					<a>
-						<p class="mui-pull-right liDetail">{{actionDetail.recordTime}}</p>
-						<div class="mui-media-body liTitle">
-							记录时间
-						</div>
-					</a>
-				</li>
+				
+				<template v-if="isEdit=='show'">
+					<li class="mui-table-view-cell">
+						<a>
+							<p class="mui-pull-right liDetail">{{actionDetail.recordTime}}</p>
+							<div class="mui-media-body liTitle">
+								记录时间
+							</div>
+						</a>
+					</li>
+				</template>
+				<template v-else-if="isEdit=='edit'">
+					<li class="mui-table-view-cell" @tap="selectTime($event,'jlsj')" data-options='{"type":"date"}'>
+						<a class="aCss">记录时间</a>
+						<p data-options='{"type":"date"}' class="mui-navigate-right rCss">{{actionDetail.recordTime}}</p>
+					</li>
+				</template>
 			</ul>
 			<!--<div id="selectClasses" class="mui-popover" ref="scrollBox" style="height: 300px;">
 				<div class="mui-popover-arrow" style="display: none;"></div>
@@ -418,7 +427,7 @@
 						var tempUrl = this.actionDetail.attachs[index].url;
 						plus.runtime.openURL(tempUrl);
 					},
-					selectTime:function(event){
+					selectTime:function(event,lx){
 						document.activeElement.blur();
 						var _self = event.target;
 						var optionsJson = _self.getAttribute('data-options') || '{}';
@@ -426,8 +435,12 @@
 						var id = _self.getAttribute('id');
 						_self.picker = new $M.DtPicker(options);
 						_self.picker.show(function(rs) {
-							console.log('选择结果: ' + rs.text);
-							actionDetialData.actionDetail.behaviorTime=rs.text;
+							console.log('选择结果: ' + rs.text+"，lx="+lx);
+							if(lx == 'fsrq') {
+								actionDetialData.actionDetail.behaviorTime=rs.text;
+							} else if(lx == 'jlsj') {
+								actionDetialData.actionDetail.recordTime=rs.text;
+							}
 							_self.picker.dispose();
 							_self.picker = null;
 						});
