--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -95,6 +95,7 @@
 				font-size: 14px;
 				color: #666666;
 				float: right;
+				margin:0px 17px 0 0;
 			}
 			
 			.mui-table-view-cell {
@@ -234,7 +235,7 @@
 					</ul>
 					<ul class="mui-table-view">
 						<template v-if="isEdit=='edit'">
-							<li class="mui-table-view-cell" @tap="selectTime($event)">
+							<li class="mui-table-view-cell" @tap="selectTime($event,'thrq')" data-options='{"type":"date"}'>
 								<a  class="aCss">谈话日期</a>
 								<template v-if="tc.chatTime !='' && tc.chatTime!= null && tc.chatTime!=undefined">
 									<p  data-options='{}' class="mui-navigate-right pCss">{{tc.chatTime}}</p>
@@ -259,9 +260,9 @@
 									<a class="aCss">谈话/教育人 </a>
 									<span  class="rCss">{{teacher}}</span>
 								</li>
-								<li class="mui-table-view-cell">
-									<a class="aCss">记录日期 </a>
-									<p  class="rCss">{{localTime}}</p>
+								<li class="mui-table-view-cell" @tap="selectTime($event,'jlrq')" data-options='{"type":"date"}'>
+									<a class="aCss">记录日期110</a>
+									<p data-options='{"type":"date"}' class="mui-navigate-right rCss">{{tc.recordTime}}</p>
 								</li>
 							</template>
 							<template v-else>
@@ -271,7 +272,7 @@
 								</li>
 								<li class="mui-table-view-cell">
 									<a class="aCss">记录日期 </a>
-									<p  class="rCss">{{tc.recordTime}}</p>
+									<span  class="rCss">{{tc.recordTime}}</span>
 								</li>
 							</template>
 						</ul>
@@ -349,7 +350,7 @@
 					talkTime: getDate2()
 				},
 				methods:{
-					selectTime:function(event){
+					selectTime:function(event,lx){
 						var _self = event.target;
 						var optionsJson = _self.getAttribute('data-options') || '{}';
 						var options = JSON.parse(optionsJson);
@@ -357,10 +358,15 @@
 						_self.picker = new $M.DtPicker(options);
 						_self.picker.show(function(rs) {
 							console.log('选择结果: ' + rs.text);
-							talkTitle.talkTime=rs.text;
-							if(talkTitle.tc !=''||talkTitle.tc !=null||talkTitle.tc !=undefined){
-								talkTitle.tc.chatTime=rs.text;
+							if(lx == 'thrq'){
+								talkTitle.talkTime=rs.text;
+								if(talkTitle.tc !=''||talkTitle.tc !=null||talkTitle.tc !=undefined){
+									talkTitle.tc.chatTime=rs.text;
+								}
+							}else if(lx == 'jlrq'){
+								talkTitle.tc.recordTime=rs.text;
 							}
+							
 							_self.picker.dispose();
 							_self.picker = null;
 						});
