--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -319,6 +319,7 @@
 							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
 								console.log("array=="+JSON.stringify(array));
 								actionArrayData.actionArray = array;
+								mui('.mui-scroll-wrapper').scroll().scrollTo(0,0,50);
 							})
 						} else { //加载更多
 							//合并数组
